--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,9 +7,9 @@
     
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link">Menu</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Sign-up</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">メニュー</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
+        <li class="nav-item"><%= link_to '会員登録', users_new_path, class: 'nav-link'  %></li>
       </ul>
     </div>
   </nav>
