--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,15 @@
       <ul class="navbar-nav">
       <% if logged_in? %>
         <li class="nav-item"><a href="#" class="nav-link">メニュー</a></li>
-        <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
+        
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%=current_user.name %></a>
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li class="dropdown-item"><%= link_to 'マイメニュー', user_path(current_user) %></li>
+            <li class="dropdown-divider"></li>
+            <li class="dropdown-item"><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+          </ul>
+        </li>
         
       <% else %>
         <li class="nav-item"><a href="#" class="nav-link">メニュー</a></li>
